--- a/elegant-objects/src/main/scala/2.4.2.ipynb
+++ b/elegant-objects/src/main/scala/2.4.2.ipynb
@@ -16,10 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "f050769f4eb1a6a3",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-25T10:31:13.112220Z",
+     "start_time": "2025-06-25T10:31:12.820940Z"
+    }
+   },
    "source": [
     "class Pixel(x: Int, y: Int) {\n",
     "  def paint(color: Color): Unit = {\n",
@@ -29,7 +32,29 @@
     "\n",
     "val center = new Pixel(50, 50)\n",
     "center.paint(new Color(\"red\"))"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cmd2.sc:2: not found: type Color\n",
+      "  def paint(color: Color): Unit = {\n",
+      "                   ^\n",
+      "cmd2.sc:8: not found: type Color\n",
+      "val res2_2 = center.paint(new Color(\"red\"))\n",
+      "                              ^\n",
+      "Compilation Failed"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "Compilation Failed",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -49,17 +74,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "03b5b78d-5c46-42eb-bb73-5f3b74a1ee25",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-25T10:31:10.472986Z",
+     "start_time": "2025-06-25T10:31:09.796093Z"
+    }
+   },
    "source": [
     "class Document {\n",
-    "  def write(content: InputStream): Unit = {\n",
+    "  def write(content: java.io.InputStream): Unit = {\n",
     "    // Implementation here\n",
     "  }\n",
     "}"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mDocument\u001B[39m"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -243,110 +284,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "bbdf72493c66f09d",
-   "metadata": {},
-   "source": [
-    "Avoiding Multiple Return Values\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "afbb4638edcc4758",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "// In some languages like Go, multiple returns might be used:\n",
-    "// func write(content) (int bytes, int time) { ... }\n",
-    "\n",
-    "// In Scala, we isolate the concept in its own class\n",
-    "class Transaction {\n",
-    "  def execute(content: java.io.InputStream): Unit = {\n",
-    "    // Execute the write operation\n",
-    "  }\n",
-    "\n",
-    "  def statistics: Statistics = {\n",
-    "    new Statistics(42, 123L) // bytes and time\n",
-    "  }\n",
-    "}\n",
-    "\n",
-    "class Statistics(val bytesWritten: Int, val executionTimeMs: Long)\n",
-    "\n",
-    "// Usage\n",
-    "val transaction = new Transaction()\n",
-    "transaction.execute(new java.io.ByteArrayInputStream(\"Data\".getBytes))\n",
-    "val stats = transaction.statistics\n",
-    "println(s\"Wrote ${stats.bytesWritten} bytes in ${stats.executionTimeMs}ms\")"
-   ]
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "## More Examples of Builders and Manipulators\n",
-   "id": "6c1aa0da91310938"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "// Example: File operations\n",
-    "class File(val path: String) {\n",
-    "  // This is a builder - returns a value, has a noun name\n",
-    "  def content: String = {\n",
-    "    // Read the file content\n",
-    "    scala.io.Source.fromFile(path).mkString\n",
-    "  }\n",
-    "\n",
-    "  // This is a manipulator - performs an action, has a verb name, returns Unit\n",
-    "  def rename(newName: String): Unit = {\n",
-    "    // Implementation to rename the file\n",
-    "    println(s\"Renamed to $newName\")\n",
-    "  }\n",
-    "\n",
-    "  // INCORRECT: This violates the principle\n",
-    "  def saveContent(text: String): Boolean = {\n",
-    "    // Implementation that saves and returns success status\n",
-    "    true\n",
-    "  }\n",
-    "\n",
-    "  // CORRECT: Refactored approach\n",
-    "  def writer: Writer = new Writer(path)\n",
-    "}\n",
-    "\n",
-    "class Writer(path: String) {\n",
-    "  // This is a manipulator - verb name, returns Unit\n",
-    "  def write(content: String): Unit = {\n",
-    "    // Implementation to write content\n",
-    "    println(s\"Writing to $path\")\n",
-    "  }\n",
-    "\n",
-    "  // This is a builder - noun name, returns a value\n",
-    "  def success: Boolean = {\n",
-    "    // Return whether the write was successful\n",
-    "    true\n",
-    "  }\n",
-    "}\n",
-    "\n",
-    "// Usage examples\n",
-    "val file = new File(\"/tmp/example.txt\")\n",
-    "val content = file.content // Builder - returns the content\n",
-    "\n",
-    "file.rename(\"newfile.txt\") // Manipulator - performs an action\n",
-    "\n",
-    "// Incorrect approach - mixing concerns\n",
-    "// val saved = file.saveContent(\"New text\")\n",
-    "\n",
-    "// Correct approach - separating concerns\n",
-    "val writer = file.writer\n",
-    "writer.write(\"New text\")\n",
-    "val isSuccess = writer.success\n"
-   ],
-   "id": "ea17dc57bb1b9984"
-  },
-  {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
@@ -374,8 +311,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T23:12:05.135599Z",
-     "start_time": "2025-06-24T23:12:04.864741Z"
+     "end_time": "2025-06-25T11:12:02.884720Z",
+     "start_time": "2025-06-25T11:12:02.385850Z"
     }
    },
    "cell_type": "code",
@@ -447,39 +384,140 @@
        "defined \u001B[32mclass\u001B[39m \u001B[36mDatabase\u001B[39m\n",
        "defined \u001B[32mclass\u001B[39m \u001B[36mConnection\u001B[39m\n",
        "defined \u001B[32mclass\u001B[39m \u001B[36mStatistics\u001B[39m\n",
-       "\u001B[36mdb\u001B[39m: \u001B[32mDatabase\u001B[39m = ammonite.$sess.cmd3$Helper$Database@34c50ffc\n",
-       "\u001B[36mconn\u001B[39m: \u001B[32mConnection\u001B[39m = ammonite.$sess.cmd3$Helper$Connection@58b5f40\n",
-       "\u001B[36mstats\u001B[39m: \u001B[32mStatistics\u001B[39m = ammonite.$sess.cmd3$Helper$Statistics@18faf734"
+       "\u001B[36mdb\u001B[39m: \u001B[32mDatabase\u001B[39m = ammonite.$sess.cmd2$Helper$Database@87065b0\n",
+       "\u001B[36mconn\u001B[39m: \u001B[32mConnection\u001B[39m = ammonite.$sess.cmd2$Helper$Connection@13a93ecd\n",
+       "\u001B[36mstats\u001B[39m: \u001B[32mStatistics\u001B[39m = ammonite.$sess.cmd2$Helper$Statistics@6aacd07a"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Summary of Section 2.4.2\n",
+    "### Boolean Results\n",
     "\n",
-    "1. **Manipulators** should:\n",
-    "   - Have verb names (e.g., `save()`, `delete()`, `update()`)\n",
-    "   - Return nothing (Unit in Scala)\n",
-    "   - Change the state of the object or perform an action\n",
-    "\n",
-    "2. **Builders** should:\n",
-    "   - Have noun names (e.g., `name()`, `size()`, `content()`)\n",
-    "   - Return a value\n",
-    "   - Not change the state of the object\n",
-    "\n",
-    "3. When you need both behaviors, **split the responsibilities** into separate objects or methods, but never mix them in a single method.\n",
-    "\n",
-    "4. This approach follows the **Single Responsibility Principle** at the method level, making code more maintainable and easier to understand.\n"
+    "Boolean methods are an exception to the naming rules. They are builders (they return values), but instead of using nouns, they should use adjectives:\n"
    ],
-   "id": "96c8b1ee044cf385"
+   "id": "a04f6a4f0e526414"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-25T11:52:32.616177Z",
+     "start_time": "2025-06-25T11:52:32.266351Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "class File(path: String) {\n",
+    "  // Good: Using adjectives for Boolean methods\n",
+    "  def empty: Boolean = {\n",
+    "    // Implementation to check if file is empty\n",
+    "    true\n",
+    "  }\n",
+    "\n",
+    "  def readable: Boolean = {\n",
+    "    // Implementation to check if file is readable\n",
+    "    true\n",
+    "  }\n",
+    "\n",
+    "  def present: Boolean = {\n",
+    "    // Better than \"exists\" - \"is present\" sounds right\n",
+    "    true\n",
+    "  }\n",
+    "\n",
+    "  // Bad examples (would be better as adjectives)\n",
+    "  def isEmpty: Boolean = empty // Not recommended - redundant \"is\" prefix\n",
+    "  def exists: Boolean = present // Not recommended - use \"present\" instead\n",
+    "}\n",
+    "\n",
+    "case class User(name: String, age: Int) {\n",
+    "  // Good: \"equal to\" sounds right\n",
+    "  def equalTo(other: User): Boolean = {\n",
+    "    this.name == other.name && this.age == other.age\n",
+    "  }\n",
+    "\n",
+    "  // Good: adjective for Boolean result\n",
+    "  def adult: Boolean = {\n",
+    "    age >= 18\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "// Usage examples showing natural reading in conditionals\n",
+    "val file = new File(\"/tmp/data.txt\")\n",
+    "val user = new User(\"John\", 25)\n",
+    "val otherUser = new User(\"Jane\", 30)\n",
+    "\n",
+    "if (file.empty) {\n",
+    "  println(\"The file is empty\") // Reads naturally: \"if file is empty\"\n",
+    "}\n",
+    "\n",
+    "if (file.readable) {\n",
+    "  println(\"The file can be read\") // Reads naturally: \"if file is readable\"\n",
+    "}\n",
+    "\n",
+    "if (user.adult) {\n",
+    "  println(\"User is an adult\") // Reads naturally: \"if user is adult\"\n",
+    "}\n",
+    "\n",
+    "if (user.equalTo(otherUser)) {\n",
+    "  println(\"Users are the same\") // Reads naturally: \"if user is equal to other user\"\n",
+    "}\n"
+   ],
+   "id": "852b19bb47926733",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file is empty\n",
+      "The file can be read\n",
+      "User is an adult\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mFile\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mUser\u001B[39m\n",
+       "\u001B[36mfile\u001B[39m: \u001B[32mFile\u001B[39m = ammonite.$sess.cmd5$Helper$File@54f61aae\n",
+       "\u001B[36muser\u001B[39m: \u001B[32mUser\u001B[39m = \u001B[33mUser\u001B[39m(name = \u001B[32m\"John\"\u001B[39m, age = \u001B[32m25\u001B[39m)\n",
+       "\u001B[36motherUser\u001B[39m: \u001B[32mUser\u001B[39m = \u001B[33mUser\u001B[39m(name = \u001B[32m\"Jane\"\u001B[39m, age = \u001B[32m30\u001B[39m)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Summary of Boolean Method Naming Rules\n",
+    "\n",
+    "1. **Boolean methods are builders** (they return values)\n",
+    "2. **Use adjectives for Boolean methods**, not nouns or verbs\n",
+    "3. **Don't use the \"is\" prefix** in the method name\n",
+    "4. **Test readability** by mentally placing \"is\" before the name - it should sound correct\n",
+    "5. **Examples of good names**:\n",
+    "   - `empty()` instead of `isEmpty()`\n",
+    "   - `readable()` instead of `canRead()`\n",
+    "   - `negative()` instead of `isNegative()`\n",
+    "   - `equalTo(obj)` instead of `equals(obj)`\n",
+    "   - `present()` instead of `exists()`\n",
+    "\n",
+    "This naming convention makes conditionals read more naturally, as the Boolean methods essentially answer the question \"is this object [adjective]?\"\n"
+   ],
+   "id": "5a031a7af7aadf47"
   }
  ],
  "metadata": {
