--- a/elegant-objects/src/main/scala/chapter2.ipynb
+++ b/elegant-objects/src/main/scala/chapter2.ipynb
@@ -9,13 +9,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "427d3146b7634f0",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
+   "execution_count": null,
    "id": "f050769f4eb1a6a3",
    "metadata": {
     "ExecuteTime": {
@@ -23,7 +18,10 @@
      "start_time": "2025-06-25T10:31:12.820940Z"
     }
    },
+   "outputs": [],
    "source": [
+    "class Color(str: String = \"\")\n",
+    "\n",
     "class Pixel(x: Int, y: Int) {\n",
     "  def paint(color: Color): Unit = {\n",
     "    // Implementation here\n",
@@ -32,29 +30,7 @@
     "\n",
     "val center = new Pixel(50, 50)\n",
     "center.paint(new Color(\"red\"))"
-   ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "cmd2.sc:2: not found: type Color\n",
-      "  def paint(color: Color): Unit = {\n",
-      "                   ^\n",
-      "cmd2.sc:8: not found: type Color\n",
-      "val res2_2 = center.paint(new Color(\"red\"))\n",
-      "                              ^\n",
-      "Compilation Failed"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "Compilation Failed",
-     "output_type": "error",
-     "traceback": []
-    }
-   ],
-   "execution_count": 1
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,6 +50,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "03b5b78d-5c46-42eb-bb73-5f3b74a1ee25",
    "metadata": {
     "ExecuteTime": {
@@ -81,18 +58,11 @@
      "start_time": "2025-06-25T10:31:09.796093Z"
     }
    },
-   "source": [
-    "class Document {\n",
-    "  def write(content: java.io.InputStream): Unit = {\n",
-    "    // Implementation here\n",
-    "  }\n",
-    "}"
-   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "defined \u001B[32mclass\u001B[39m \u001B[36mDocument\u001B[39m"
+       "defined \u001b[32mclass\u001b[39m \u001b[36mDocument\u001b[39m"
       ]
      },
      "execution_count": 1,
@@ -100,7 +70,13 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "source": [
+    "class Document {\n",
+    "  def write(content: java.io.InputStream): Unit = {\n",
+    "    // Implementation here\n",
+    "  }\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -114,6 +90,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "45a18c1cea944fd0",
    "metadata": {
     "ExecuteTime": {
@@ -121,6 +98,24 @@
      "start_time": "2025-06-24T23:05:06.041173Z"
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mDocumentProblem\u001b[39m\n",
+       "defined \u001b[32mclass\u001b[39m \u001b[36mDocument\u001b[39m\n",
+       "defined \u001b[32mclass\u001b[39m \u001b[36mOutputPipe\u001b[39m\n",
+       "\u001b[36mdoc\u001b[39m: \u001b[32mDocument\u001b[39m = ammonite.$sess.cmd1$Helper$Document@58e67ec3\n",
+       "\u001b[36mpipe\u001b[39m: \u001b[32mOutputPipe\u001b[39m = ammonite.$sess.cmd1$Helper$OutputPipe@3a133558\n",
+       "\u001b[36mbytesWritten\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m42\u001b[39m\n",
+       "\u001b[36mtimeElapsed\u001b[39m: \u001b[32mLong\u001b[39m = \u001b[32m123L\u001b[39m"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// Problem: This violates our principle - a manipulator returning a value\n",
     "class DocumentProblem {\n",
@@ -159,26 +154,7 @@
     "pipe.write(new java.io.ByteArrayInputStream(\"Hello\".getBytes))\n",
     "val bytesWritten = pipe.bytes\n",
     "val timeElapsed = pipe.time"
-   ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defined \u001B[32mclass\u001B[39m \u001B[36mDocumentProblem\u001B[39m\n",
-       "defined \u001B[32mclass\u001B[39m \u001B[36mDocument\u001B[39m\n",
-       "defined \u001B[32mclass\u001B[39m \u001B[36mOutputPipe\u001B[39m\n",
-       "\u001B[36mdoc\u001B[39m: \u001B[32mDocument\u001B[39m = ammonite.$sess.cmd1$Helper$Document@58e67ec3\n",
-       "\u001B[36mpipe\u001B[39m: \u001B[32mOutputPipe\u001B[39m = ammonite.$sess.cmd1$Helper$OutputPipe@3a133558\n",
-       "\u001B[36mbytesWritten\u001B[39m: \u001B[32mInt\u001B[39m = \u001B[32m42\u001B[39m\n",
-       "\u001B[36mtimeElapsed\u001B[39m: \u001B[32mLong\u001B[39m = \u001B[32m123L\u001B[39m"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 1
+   ]
   },
   {
    "cell_type": "markdown",
@@ -284,8 +260,9 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "ca0fde3f89ca0bca",
+   "metadata": {},
    "source": [
     "## Why This Principle Matters\n",
     "\n",
@@ -295,27 +272,55 @@
     "2. **More predictable** - Builders don't change state, manipulators don't return values\n",
     "3. **More maintainable** - Single responsibility principle applied at the method level\n",
     "4. **More testable** - Easier to test methods with clear, focused responsibilities\n"
-   ],
-   "id": "ca0fde3f89ca0bca"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "87c947d36339dff4",
+   "metadata": {},
    "source": [
     "## Handling Complex Cases\n",
     "\n",
     "Sometimes we need both information and manipulation. The solution is to create specific objects for each responsibility:\n"
-   ],
-   "id": "87c947d36339dff4"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7c89279a78570d0c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-25T11:12:02.884720Z",
      "start_time": "2025-06-25T11:12:02.385850Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing SELECT * FROM users on jdbc:postgresql://localhost:5432/mydb\n",
+      "Connection closed\n",
+      "Executed 42 queries\n",
+      "Connection time: 1000ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mDatabase\u001b[39m\n",
+       "defined \u001b[32mclass\u001b[39m \u001b[36mConnection\u001b[39m\n",
+       "defined \u001b[32mclass\u001b[39m \u001b[36mStatistics\u001b[39m\n",
+       "\u001b[36mdb\u001b[39m: \u001b[32mDatabase\u001b[39m = ammonite.$sess.cmd2$Helper$Database@87065b0\n",
+       "\u001b[36mconn\u001b[39m: \u001b[32mConnection\u001b[39m = ammonite.$sess.cmd2$Helper$Connection@13a93ecd\n",
+       "\u001b[36mstats\u001b[39m: \u001b[32mStatistics\u001b[39m = ammonite.$sess.cmd2$Helper$Statistics@6aacd07a"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// Example: Managing a database connection\n",
     "class Database(url: String) {\n",
@@ -365,55 +370,53 @@
     "val stats = db.stats\n",
     "println(s\"Executed ${stats.queryCount} queries\")\n",
     "println(s\"Connection time: ${stats.connectionTime}ms\")\n"
-   ],
-   "id": "7c89279a78570d0c",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executing SELECT * FROM users on jdbc:postgresql://localhost:5432/mydb\n",
-      "Connection closed\n",
-      "Executed 42 queries\n",
-      "Connection time: 1000ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "defined \u001B[32mclass\u001B[39m \u001B[36mDatabase\u001B[39m\n",
-       "defined \u001B[32mclass\u001B[39m \u001B[36mConnection\u001B[39m\n",
-       "defined \u001B[32mclass\u001B[39m \u001B[36mStatistics\u001B[39m\n",
-       "\u001B[36mdb\u001B[39m: \u001B[32mDatabase\u001B[39m = ammonite.$sess.cmd2$Helper$Database@87065b0\n",
-       "\u001B[36mconn\u001B[39m: \u001B[32mConnection\u001B[39m = ammonite.$sess.cmd2$Helper$Connection@13a93ecd\n",
-       "\u001B[36mstats\u001B[39m: \u001B[32mStatistics\u001B[39m = ammonite.$sess.cmd2$Helper$Statistics@6aacd07a"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 2
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "a04f6a4f0e526414",
+   "metadata": {},
    "source": [
     "### Boolean Results\n",
     "\n",
     "Boolean methods are an exception to the naming rules. They are builders (they return values), but instead of using nouns, they should use adjectives:\n"
-   ],
-   "id": "a04f6a4f0e526414"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "852b19bb47926733",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-25T11:52:32.616177Z",
      "start_time": "2025-06-25T11:52:32.266351Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file is empty\n",
+      "The file can be read\n",
+      "User is an adult\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mFile\u001b[39m\n",
+       "defined \u001b[32mclass\u001b[39m \u001b[36mUser\u001b[39m\n",
+       "\u001b[36mfile\u001b[39m: \u001b[32mFile\u001b[39m = ammonite.$sess.cmd5$Helper$File@54f61aae\n",
+       "\u001b[36muser\u001b[39m: \u001b[32mUser\u001b[39m = \u001b[33mUser\u001b[39m(name = \u001b[32m\"John\"\u001b[39m, age = \u001b[32m25\u001b[39m)\n",
+       "\u001b[36motherUser\u001b[39m: \u001b[32mUser\u001b[39m = \u001b[33mUser\u001b[39m(name = \u001b[32m\"Jane\"\u001b[39m, age = \u001b[32m30\u001b[39m)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class File(path: String) {\n",
     "  // Good: Using adjectives for Boolean methods\n",
@@ -469,38 +472,12 @@
     "if (user.equalTo(otherUser)) {\n",
     "  println(\"Users are the same\") // Reads naturally: \"if user is equal to other user\"\n",
     "}\n"
-   ],
-   "id": "852b19bb47926733",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The file is empty\n",
-      "The file can be read\n",
-      "User is an adult\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "defined \u001B[32mclass\u001B[39m \u001B[36mFile\u001B[39m\n",
-       "defined \u001B[32mclass\u001B[39m \u001B[36mUser\u001B[39m\n",
-       "\u001B[36mfile\u001B[39m: \u001B[32mFile\u001B[39m = ammonite.$sess.cmd5$Helper$File@54f61aae\n",
-       "\u001B[36muser\u001B[39m: \u001B[32mUser\u001B[39m = \u001B[33mUser\u001B[39m(name = \u001B[32m\"John\"\u001B[39m, age = \u001B[32m25\u001B[39m)\n",
-       "\u001B[36motherUser\u001B[39m: \u001B[32mUser\u001B[39m = \u001B[33mUser\u001B[39m(name = \u001B[32m\"Jane\"\u001B[39m, age = \u001B[32m30\u001B[39m)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 5
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "5a031a7af7aadf47",
+   "metadata": {},
    "source": [
     "## Summary of Boolean Method Naming Rules\n",
     "\n",
@@ -516,8 +493,7 @@
     "   - `present()` instead of `exists()`\n",
     "\n",
     "This naming convention makes conditionals read more naturally, as the Boolean methods essentially answer the question \"is this object [adjective]?\"\n"
-   ],
-   "id": "5a031a7af7aadf47"
+   ]
   }
  ],
  "metadata": {
